# agenthub

./: CHANGELOG.md  Cargo.toml  PROJECT_PLAN.md  README.md  agents.json  agents.md  agents.schema.json  goal.md  management.md  test-cli.ps1  test-gui.ps1
.github/workflows/: ci.yml  release.yml
.mimocode/skills/elixir-dev/: SKILL.md
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
agenthub-cli/: Cargo.toml
agenthub-cli/src/: main.rs
agenthub-core/: Cargo.toml
agenthub-core/src/: agent.rs  catalog.rs  config.rs  diagnostic.rs  error.rs  installer.rs  lib.rs  memory.rs  prompt.rs  session.rs  skill.rs  status.rs
agenthub-ui/: index.html  package-lock.json  package.json
agenthub-ui/src/: App.vue  style.css
agenthub-ui/src-tauri/: Cargo.toml  tauri.conf.json
agenthub-ui/src-tauri/src/: main.rs
agenthub-ui/src/components/: AgentList.vue  ConfigManager.vue  DiagnosticView.vue  MemoryManager.vue  PromptManager.vue  SessionManager.vue  SkillManager.vue
