[package]
name = "agenthub"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AgentHub - AI coding agent management"

[dependencies]
agenthub-core = { path = "../../agenthub-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }